# databricks-docs-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  run-server.sh
src/: __init__.py
src/crawler/: __init__.py  chunker.py  fetcher.py  main.py  parser.py  sitemap.py  state.py
src/server/: db.py  main.py  tools.py
src/shared/: config.py  models.py
