[project]
name = "databricks-docs-mcp"
version = "0.1.0"
description = "MCP server for Databricks documentation search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.25.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdownify>=0.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
    "xxhash>=3.4.0",
]

[project.scripts]
crawl = "src.crawler.main:main"
mcp-server = "src.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
